...

    var body: some View {
        Button(action: action) {
            Image(systemName: "chevron.backward")
                .frame(width: 32, height: 44)
        }
        .accessibilityIdentifier("backButton")
    }
}

